[tool.poetry]
name = "Larry"
version = "0.1.0"
description = ""
authors = ["Anggie Alava <anggie.alava.12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SpeechRecognition = "^3.10.0"
PyAudio = "^0.2.13"
pyttsx3 = "^2.90"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
